       reference/guide for Solr users (NUTCH-2654)

Breaking Changes

    -  The value of crawl.gen.delay is now read in milliseconds as stated in the description
       in nutch-default.xml. Previously, the value has been read in days, see NUTCH-1842 for
       further information.

    -  HostDB entries have been moved from Integer to Long in order to accomodate very large
       hosts. Remove your existing HostDB and recreate it with bin/nutch updatehostdb.


Nutch 1.15 Release (25/07/2018)
Release Report: https://s.apache.org/nczS

Breaking Changes

    - indexer plugins are now configured in a single XML file (conf/index-writers.xml),
      see https://wiki.apache.org/nutch/IndexWriters - setting or overwriting configuration
      parameters via Nutch properties is not possible anymore.

Bug

    [NUTCH-1993] - Nutch does not use backup parsers
    [NUTCH-2071] - A parser failure on a single document may fail crawling job if parser.timeout=-1
    [NUTCH-2145] - parse/index checker fail to fetch valid percent-encoded URLs
    [NUTCH-2161] - Interrupted failed and/or killed tasks fail to clean up temp directories in HDFS
    [NUTCH-2273] - Selenium and InteractiveSelenium Do Not Support HTTPS
    [NUTCH-2310] - Protocol-Selenium does not support HTTPS protocol
    [NUTCH-2321] - Indexing filter checker leaks threads
    [NUTCH-2324] - Issue in setting default linkdb path
    [NUTCH-2447] - Work-around SSLProtocolException: handshake alert: unrecognized_name
    [NUTCH-2454] - REST API fix for usage of hostdb in generator
    [NUTCH-2461] - Generate passes the data to when maxCount == 0
    [NUTCH-2466] - Sitemap processor to follow redirects
    [NUTCH-2467] - Sitemap type field can be null
    [NUTCH-2485] - ParserFactory swallows exception
    [NUTCH-2486] - Compiler Warning: Unchecked / unsafe operations in MimeTypeIndexingFilter
    [NUTCH-2489] - Dependency collision with lucene-analyzers-common in scoring-similarity plugin