@@ -14,7 +14,15 @@ Breaking Changes
        further information.
 
     -  HostDB entries have been moved from Integer to Long in order to accomodate very large
-       hosts. Remove your existing HostDB and recreate it with bin/nutch updatehostdb.
+       hosts. Remove your existing HostDB and recreate it with bin/nutch updatehostdb, see
+       NUTCH-2694 for additional information.
+
+    -  The signature class TextProfileSignature has been improved to be stable over
+       consecutive runs by sorting tokens by frequency first and secondarily in lexicographic
+       order.  If an existing CrawlDb contains signatures generated by TextProfileSignature
+       these are likely to change when upgrading to Nutch 1.16.  The previous behavior relying
+       on a semi-stable pseudo-random hash sorting could be restored setting the property
+       `db.signature.text_profile.sec_sort_lex` to `false`. See also NUTCH-2381.
 
 
 Nutch 1.15 Release (25/07/2018)
